# robot_calibration

./: README.md
lcov_coverage/: CMakeLists.txt  package.xml
robot_calibration/: CMakeLists.txt  package.xml  robot_calibration.xml
robot_calibration/CMakeModules/: CodeCoverage.cmake
robot_calibration/include/robot_calibration/: calibration_offset_parser.h
robot_calibration/include/robot_calibration/capture/: apriltag_finder.h  apriltags2_finder.h  checkerboard_finder.h
robot_calibration/src/: calibrate.cpp  calibration_offset_parser.cpp  optimizer.cpp
robot_calibration/src/finders/: apriltag_finder.cpp  apriltags2_finder.cpp  checkerboard_finder.cpp
robot_calibration/src/tools/: viz.cpp
robot_calibration/test/: CMakeLists.txt
